# internal/api/routes/caddy-routes.go
@@ -1,0 +1,10 @@
+package routes
+
+import "github.com/go-fuego/fuego"
+
+func RegisterCaddyRoutes(s *fuego.Server) {
+	group := fuego.Group(s, "/caddy")
+	fuego.Get(group,"/",GetCaddyController)
+	// fuego.Get(group,"/running",GetRunningCaddyController)
+	// fuego.Post(group,"/",MakeCaddyController)
+}
